--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 						<p class="device-notification--message">We request you to orient your device to portrait or find a larger screen.</p>
 					</div>
 					<div class="perspective effect-rotate-left">
-						<div class="container"><div class="outer-nav--return"></div>
+						<div class="container">
+							<div class="outer-nav--return"></div>
 							<div id="viewport" class="l-viewport">
 								<div class="l-wrapper">
 									<header class="header">
@@ -47,7 +48,7 @@
 											<div class="intro">
 												<div class="intro--banner">
 													<span class="btn-background"></span>
-													<img src="assets/img/introduction-visual.jpeg" alt="Welcome">
+													<img src="assets/img/varnambig.png" alt="Welcome" width="100%">
 												</div>
 												<div class="intro--options">
 													<a href="#0">
