--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	  <meta charset="utf-8">
 	  <meta name="viewport" content="width=device-width, initial-scale=1">
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	  <meta name="author" content="buckymaler.com">
 	  <link rel="stylesheet" href="assets/css/main.css">
+	  <link rel="shortcut icon" href="assets/img/favicon.png">
 	  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	</head>
 	<body>
@@ -112,6 +112,8 @@
 												<div class="scroll">
 													<div class="event-item mu">
 														<h4 class="event-head">Light Music</h4>
+														<p class="details"><a href="pdf.com" target="blank">Details</a></p>
+														<p class="register"><a href="pdf.com" target="blank">Register</a></p>
 													</div>
 													<div class="event-item mu">
 														<h4 class="event-head">Classical Music</h4>
